@@ -134,7 +134,7 @@ define,	   0x649FA7,	0x6076E0,	0x649EEB,	"civ_prog_malloc",				"void * (__cdecl 
 define,	   0x649EBE,	0x668816,	0x649E02,	"civ_prog_free",				"void (__cdecl *) (void * p)"
 inlead,	   0x61A480,	0x63B9F0,	0x61A3B0,	"Context_Menu_open",				"int (__fastcall *) (Context_Menu * this, int edx, int x, int y, int param_3)"
 define,	   0x4E993C,	0x4F273A,	0x4E99FC,	"ADDR_OPEN_UNIT_MENU_RETURN",			"int"
-define,	   0x61B0C0,	0x63C940,	0x61AFF0,	"Context_Menu_widen_for_text",			"void (__fastcall *) (Context_Menu * this, int edx, char * text)"
+define,	   0x61B0C0,	0x63C940,	0x61AFF0,	"Context_Menu_widen_for_text",			"void (__fastcall *) (Context_Menu * this, int edx, char * text)"
 inlead,	   0x61A110,	0x63B420,	0x61A040,	"Context_Menu_add_item_and_set_color",		"int (__fastcall *)  (Context_Menu * this, int edx, int item_id, char * text, int red)"
 inlead,	   0x45C750,	0x45EA70,	0x45C7D0,	"Unit_ai_move_terraformer",			"void (__fastcall *) (Unit * this)"
 inlead,	   0x4B1DC0,	0x4B8D50,	0x4B1E50,	"City_requires_improvement_to_grow",		"int (__fastcall *) (City * this)"
@@ -859,6 +859,10 @@ inlead,	   0x4DBD70,	0x4E4740,	0x4DBE30,	"Main_Screen_Form_find_next_unit_for_cy
 define,	   0x4EDD40,	0x4F6C90,	0x4EDE00,	"UnitIDList_insert_before",			"void (__fastcall *) (UnitIDList * this, int edx, int id, UnitIDItem * item)"
 define,	   0x5BE970,	0x5CD590,	0x5BE680,	"Unit_can_cycle_to",				"bool (__fastcall *) (Unit * this)"
 define,	   0x4DABB2,	0x4E3570,	0x4DAC72,	"SET_SELECTED_UNIT_TO_ISSUE_WAIT_COMMAND_RET",	"int"
+repl vptr, 0x66DCD0,	0x68ADB4,	0x66DCD0,	"City_m22",					"void (__fastcall *) (City * this, int edx, bool param_1)"
+define,	   0x4B95D7,	0x4C0C43,	0x4B9667,	"CITY_M22_TO_ADD_BUILDING_IF_DONE_RETURN_1",	"int"
+define,	   0x4B96C9,	0x4C0D35,	0x4B9759,	"CITY_M22_TO_ADD_BUILDING_IF_DONE_RETURN_2",	"int"
+define,	   0x4B90D6,	0x4C0743,	0x4B9166,	"CITY_M22_TO_SPAWN_UNIT_IF_DONE_RETURN",	"int"
 
 ignore,	   0x5FC710,	0x0,		0x0,		"PCX_Image_create_and_init_jgl_image",		"int (__fastcall *) (PCX_Image * this, int edx, int width, int height, int bit_depth, int param_4, int param_5, int param_6)"
 ignore,	   0x5FCC50,	0x0,		0x0,		"PCX_Image_draw_region_to_location",		"void (__fastcall *) (PCX_Image * this, int edx, PCX_Image * canvas, int src_x, int src_y, int dest_x, int dest_y, int width, int height)"
