@@ -307,6 +307,11 @@ ai_worker_requirement_percent = 150
 ;   AI CAN FORM ARMY WITHOUT SPECIAL ABILITY -- Similar to the above issue, the AI's ability to form armies with leader units is not gated by those
 ; units having the "build army" special ability.
 ;   CRASH IN LEADER UNIT AI -- The base game's AI routine for leader units may crash due to uninitialized variables.
+;   FAILURE TO FIND NEW CITY BUILD -- After a city completes production, the game searches for a new build for it. If that city is owned by the seated
+; player, whatever the game finds will be filled in as the default option in the domestic advisor popup asking the player to choose a new build. If
+; the search fails to find anything, there will be no default option, the dropdown selector will not be initialized, and the game will crash when it
+; tries to open the popup. To fix this, the mod detects when the game has failed to find a new build option and fills in Wealth instead or, failing
+; that, any unit or improvement that the city can build.
 
 patch_submarine_bug = true
 patch_science_age_bug = true
@@ -325,6 +330,7 @@ patch_zero_production_crash = true
 patch_ai_can_sacrifice_without_special_ability = true
 patch_ai_can_form_army_without_special_ability = true
 patch_crash_in_leader_unit_ai = true
+patch_failure_to_find_new_city_build = true
 
 ; At the beginning of each AI player's turn, deletes any units of theirs that are not on a valid tile. This addresses a rare crash that can occur when
 ; the unit AI invokes the pathfinder for an off-map unit. I don't know how AI units can end up off the map in the first place.
