@@ -2,6 +2,7 @@
   - Option named unit_cycle_search_criteria
 - Can specify a victory animation for air units in aircraft_victory_animation option
 - Option show_armies_performing_defensive_bombard that fixes defensive bombard animations being skipped when the bombarding unit is in an army
+- Fix crash caused by failure to find default option for popup asking player to select new build in city that completed its previous one
 
 * RELEASE 26
 - Add some options to make land transports viable, controlled by land_transport_rules setting
